Fix --mode for rotated screens

BUG: 322653